--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,14 +1,17 @@
 set -g default-terminal "tmux-256color"
 set -g mouse on
 
+# Set base window and pane index to 1 instead of 0
 set -g base-index 1
 set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
+# Alt+Shift+H and Alt+Shift+L to move between windows
 bind -n M-H previous-window
 bind -n M-L next-window
 
+# Set prefix to Ctrl+Space
 unbind C-b
 set -g prefix C-space
 bind C-space send-prefix
@@ -16,11 +19,11 @@ bind C-space send-prefix
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-yank'
-
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
 set -g @catppuccin_window_status_style "rounded"
 set -g status-right-length 100
 set -g status-left-length 100
@@ -31,13 +34,14 @@ set -ag status-right "#{E:@catppuccin_status_session}"
 set -ag status-right "#{E:@catppuccin_status_uptime}"
 set -agF status-right "#{E:@catppuccin_status_battery}"
 
+# Set vi mode and keybindings
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
+# Set the working directory of new panes to the current working directory
 bind '"' split-window -v -c '#{pane_current_path}'
 bind % split-window -h -c '#{pane_current_path}'
 
 run '~/.tmux/plugins/tpm/tpm'
-
