--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -16,23 +16,21 @@ unbind C-b
 set -g prefix C-space
 bind C-space send-prefix
 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin "tmux-plugins/tpm"
+set -g @plugin "tmux-plugins/tmux-sensible"
+set -g @plugin "christoomey/vim-tmux-navigator"
+set -g @plugin "tmux-plugins/tmux-cpu"
+set -g @plugin "tmux-plugins/tmux-battery"
+set -g @plugin "tmux-plugins/tmux-yank"
 
-set -g @catppuccin_window_status_style "rounded"
-set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -agF status-right "#{E:@catppuccin_status_cpu}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
-set -agF status-right "#{E:@catppuccin_status_battery}"
+set -g status-position top
+set -g status-left ''
+set -g status-right ''
+
+# Colorscheme
+set -g @plugin "catppuccin/tmux"
+set -g @catppuccin_window_status_style "basic"
+set -g @catppuccin_status_background "default"
 
 # Set vi mode and keybindings
 set-window-option -g mode-keys vi
@@ -41,7 +39,10 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # Set the working directory of new panes to the current working directory
-bind '"' split-window -v -c '#{pane_current_path}'
-bind % split-window -h -c '#{pane_current_path}'
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
-run '~/.tmux/plugins/tpm/tpm'
+set -gq allow-passthrough on
+set -g visual-activity off
+
+run "~/.tmux/plugins/tpm/tpm"
